Linux: Upgrade to JDK 22